--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div><!--//secondary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
-                  <li class="mb-3">Last updated: Apr. 20, 2020</li>
+                  <li class="mb-3">Last updated: Apr. 1, 2021</li>
                   <li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
@@ -56,7 +56,7 @@
           <section class="resume-section summary-section mb-5">
             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Profile</h2>
             <div class="resume-section-content">
-              <p class="mb-0"> Kento Aoyama is a Ph.D. Student at Department of Computer Science, School of Computing, Tokyo Institute of Technology. Research interests include <b>High Performance Computing</b>, Parallel/Distributed/Cloud Computing, <b>Container Virtualization</b>, and Bioinformatics.</p>
+              <p class="mb-0"> Kento Aoyama (M.Eng) is a researcher working at Department of Computer Science, School of Computing, Tokyo Institute of Technology. Research interests include <b>High Performance Computing</b>, Parallel/Distributed/Cloud Computing, <b>Container Virtualization</b>, and Bioinformatics.</p>
             </div>
           </section><!--//summary-section-->
           <div class="row">
@@ -80,7 +80,7 @@
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Ph.D. student</h3>
-                          <div class="resume-company-name ml-auto">Tokyo Institute of Technology</div>
+                          <div class="resume-company-name ml-auto">Dept. of Computer Science, Tokyo Institute of Technology</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2016 - 2021</div>
                       </div><!--//resume-timeline-item-header-->
@@ -166,8 +166,8 @@
                     <article class="resume-timeline-item position-relative pb-5">
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
-                          <h3 class="resume-position-title font-weight-bold mb-1">Master degree in Computer Science</small></h3>
-                          <div class="resume-company-name ml-auto">Tokyo Institute of Technology</div>
+                          <h3 class="resume-position-title font-weight-bold mb-1">Master of Engineering</small></h3>
+                          <div class="resume-company-name ml-auto">Dept. of Computer Science, Tokyo Institute of Technology</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2013 - 2015</div>
                       </div><!--//resume-timeline-item-header-->
@@ -197,8 +197,8 @@
                     <article class="resume-timeline-item position-relative">
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
-                          <h3 class="resume-position-title font-weight-bold mb-1">Bachelor degree in Computer Science</small></h3>
-                          <div class="resume-company-name ml-auto">The University of Electro-Communications</div>
+                          <h3 class="resume-position-title font-weight-bold mb-1">Bachelor of Engineering</small></h3>
+                          <div class="resume-company-name ml-auto">Dept. of Computer Science,<br>The University of Electro-Communications</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2011 - 2013</div>
                       </div><!--//resume-timeline-item-header-->
@@ -207,7 +207,7 @@
                     <article class="resume-timeline-item position-relative">
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
-                          <h3 class="resume-position-title font-weight-bold mb-1">Associate degree in Computer Science</small></h3>
+                          <h3 class="resume-position-title font-weight-bold mb-1">Dept. of Computer Engineering</small></h3>
                           <div class="resume-company-name ml-auto">National Institute of Technology, Toyama College</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2006 - 2011</div>
