--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
                     <article class="resume-timeline-item position-relative">
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
-                          <h3 class="resume-position-title font-weight-bold mb-1">Dept. of Computer Engineering</small></h3>
-                          <div class="resume-company-name ml-auto">National Institute of Technology, Toyama College</div>
+                          <div class="resume-company-name ml-auto">Dept. of Computer Engineering, National Institute of Technology, Toyama College</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2006 - 2011</div>
                       </div><!--//resume-timeline-item-header-->
