--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <section class="resume-section summary-section mb-5">
             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Profile</h2>
             <div class="resume-section-content">
-              <p class="mb-0"> Kento Aoyama (M.Eng) is a researcher working at Department of Computer Science, School of Computing, Tokyo Institute of Technology. Research interests include <b>High Performance Computing</b>, Parallel/Distributed/Cloud Computing, <b>Container Virtualization</b>, and Bioinformatics.</p>
+              <p class="mb-0"> Kento Aoyama (M.Eng) is a researcher working at Tokyo Institute of Technology. Research interests include <b>High Performance Computing</b>, Parallel/Distributed/Cloud Computing, <b>Container Virtualization</b>, and Bioinformatics.</p>
             </div>
           </section><!--//summary-section-->
           <div class="row">
@@ -70,7 +70,7 @@
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Researcher</small></h3>
-                          <div class="resume-company-name ml-auto">Tokyo Institute of Technology</div>
+                          <div class="resume-company-name ml-auto">School of Computing, Tokyo Institute of Technology</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2021 - Present</div>
                       </div><!--//resume-timeline-item-header-->
@@ -80,7 +80,7 @@
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Ph.D. student</h3>
-                          <div class="resume-company-name ml-auto">Dept. of Computer Science, Tokyo Institute of Technology</div>
+                          <div class="resume-company-name ml-auto">Department of Computer Science, School of Computing, Tokyo Institute of Technology</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2016 - 2021</div>
                       </div><!--//resume-timeline-item-header-->
@@ -167,7 +167,7 @@
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Master of Engineering</small></h3>
-                          <div class="resume-company-name ml-auto">Dept. of Computer Science, Tokyo Institute of Technology</div>
+                          <div class="resume-company-name ml-auto">Department of Computer Science, Graduate School of Information Science and Engineering,<br>Tokyo Institute of Technology</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2013 - 2015</div>
                       </div><!--//resume-timeline-item-header-->
@@ -198,7 +198,7 @@
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Bachelor of Engineering</small></h3>
-                          <div class="resume-company-name ml-auto">Dept. of Computer Science,<br>The University of Electro-Communications</div>
+                          <div class="resume-company-name ml-auto">Department of Computer Science, Faculty of Electro-Communications,<br>The University of Electro-Communications</div>
                         </div><!--//row-->
                         <div class="resume-position-time">2011 - 2013</div>
                       </div><!--//resume-timeline-item-header-->
@@ -299,7 +299,7 @@
                       </li>
                       <li class="mb-1">
                         <b>Large-scale Parallelization of Matrix-matrix Product in Double-double Precision using Fox Algorithm on GPU Cluster</b><br>
-                        Department of Computer Science, The University of Electro-Communications.
+                        Department of Computer Science, Faculty of Electro-Communications, The University of Electro-Communications.
                       </li>
                       <li class="mb-1">
                         <b>Improvements of the GPU accelerated Simulation for Mach Bands Generation Mechanism in Human Visual System Model</b><br>
