--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
               <div class="primary-info">
                 <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Kento Aoyama</h1>
-                <div class="title mb-3">Researcher</div>
+                <div class="title mb-3">IT Infrastructure Engineer</div>
                 <ul class="list-unstyled">
-                  <li class="mb-2"><a href="mailto:aoyama@bi.c.titech.ac.jp"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>aoyama@bi.c.titech.ac.jp</a></li>
+                  <li class="mb-2"><a href="mailto:k.aoyama1127@gmail.com"><i class="fas fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>k.aoyama1127@gmail.com</a></li>
                   <li><a href="https://maps.google.com/maps?q=Tokyo,%20Japan"><i class="fas fa-map-marker-alt fa-fw mr-2" data-fa-transform="grow-6"></i>Tokyo, Japan</a></li>
                 </ul>
               </div><!--//primary-info-->
@@ -44,7 +44,7 @@
               </div><!--//secondary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
-                  <li class="mb-3">Last updated: Apr. 1, 2021</li>
+                  <li class="mb-3">Last updated: July, 2, 2022</li>
                   <li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
@@ -53,12 +53,6 @@
           </div><!--//media-->
         </header>
         <div class="resume-body p-5">
-          <section class="resume-section summary-section mb-5">
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Profile</h2>
-            <div class="resume-section-content">
-              <p class="mb-0"> Kento Aoyama (M.Eng) is a researcher working at Tokyo Institute of Technology. Research interests include <b>High Performance Computing</b>, Parallel/Distributed/Cloud Computing, <b>Container Virtualization</b>, and Bioinformatics.</p>
-            </div>
-          </section><!--//summary-section-->
           <div class="row">
             <div class="col-lg-12">
               <section class="resume-section experience-section mb-5">
@@ -69,10 +63,20 @@
                     <article class="resume-timeline-item position-relative">
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
+                          <h3 class="resume-position-title font-weight-bold mb-1">IT Infrastructure Engineer</small></h3>
+                          <div class="resume-company-name ml-auto">CyberAgent, Inc.</div>
+                        </div><!--//row-->
+                        <div class="resume-position-time">2022 - Present</div>
+                      </div><!--//resume-timeline-item-header-->
+                    </article><!--//resume-timeline-item-->
+
+                    <article class="resume-timeline-item position-relative">
+                      <div class="resume-timeline-item-header mb-2">
+                        <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Researcher</small></h3>
                           <div class="resume-company-name ml-auto">School of Computing, Tokyo Institute of Technology</div>
                         </div><!--//row-->
-                        <div class="resume-position-time">2021 - Present</div>
+                        <div class="resume-position-time">2021 - 2022</div>
                       </div><!--//resume-timeline-item-header-->
                     </article><!--//resume-timeline-item-->
 
