move slides from slideshare to speakerdeck

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
                   <li class="mb-3">Last updated: July, 2, 2022</li>
-                  <li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
+                  <li class="mb-3"><a href="https://speakerdeck.com/metavariable"><span class="fa-container text-center mr-2"><i class="fab fa-speaker-deck"></i></span>speakerdeck.com/metavariable</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
               </div><!--//secondary-info-->
@@ -256,7 +256,7 @@
                         </li>
                       <li class="mb-1">
                         <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "Evaluation of Container Virtualized MEGADOCK System in Distributed Computing Environment", <I>IPSJ SIG Technical Report</I>, 2017-BIO-49(3), pp.1-8. 2017. 
-                        [<A href="https://www.slideshare.net/KentoAoyama/evaluation-of-container-virtualized-megadock-systemin-distributed-computing-environment">Slide</A>]
+                        [<A href="https://speakerdeck.com/metavariable/evaluation-of-container-virtualized-megadock-system-in-distributed-computing-environment">Slide</A>]
                       </li>
                       <li class="mb-1">
                         <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Large-scale Parallelization of Exome Analysis Pipeline on K-computer", <I>IPSJ SIG Technical Report</I>, 2014-BIO-38(33), pp.1-7. 2014.
