--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div><!--//secondary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
-                  <li class="mb-3">Last updated: July, 2, 2022</li>
+                  <li class="mb-3">Last updated: September, 16, 2024</li>
                   <li class="mb-3"><a href="https://speakerdeck.com/metavariable"><span class="fa-container text-center mr-2"><i class="fab fa-speaker-deck"></i></span>speakerdeck.com/metavariable</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
@@ -68,6 +68,24 @@
                         </div><!--//row-->
                         <div class="resume-position-time">2022 - Present</div>
                       </div><!--//resume-timeline-item-header-->
+                      <div class="resume-timeline-item-desc">
+                        <p>Development and operation of the <b>ML Platform</b>, a private machine learning platform on private HPC infrastructure, which provides various MLOps services such as distributed job, inference instance, and Jupyter environments for ML/DS Engineers.</p>
+                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+                        <ul class="small">
+                          <li>Private Cloud Meetup #4 (Tokyo, Japan, 2023)</li>
+                          <li>Cloud Operator Days Tokyo 2024 (Tokyo, Japan, 2024)</li>
+                        </ul>
+                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
+                        <ul class="list-inline">
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">ML Platform Engineering</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Kubernetes</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">golang</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">grpc</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">GPU/CUDA</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">MPI/NCCL</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">GPU Cluster Management</span></li>
+                        </ul>
+                      </div><!--//resume-timeline-item-desc-->
                     </article><!--//resume-timeline-item-->
 
                     <article class="resume-timeline-item position-relative">
@@ -80,7 +98,7 @@
                       </div><!--//resume-timeline-item-header-->
                     </article><!--//resume-timeline-item-->
 
-                    <article class="resume-timeline-item position-relative pb-5">  
+                    <article class="resume-timeline-item position-relative pb-5"> 
                       <div class="resume-timeline-item-header mb-2">
                         <div class="d-flex flex-column flex-md-row">
                           <h3 class="resume-position-title font-weight-bold mb-1">Ph.D. student</h3>
@@ -289,6 +307,12 @@
                   <div class="oral-presentation">
                     <h3 class="resume-position-title font-weight-bold mb-1">Oral Presentation</small></h3>
                     <ul class="list-unstyled resume-degree-org">
+                      <li class="mb-1"></li>
+                        <b>Kento Aoyama</b>, "Introduction of ML Platform, a Machine Learning Platform in CyberAgent, and recent DevOps issues", <I>Private Cloud Meetup #4</I>, Aug. 2023.
+                      </li>
+                      <li class="mb-1"></li>
+                        <b>Kento Aoyama</b>, "Distributed Computing Service and Platform for LLM Development in CyberAgent", <I>Cloud Operator Days Tokyo 2024 (CODT'24)</I>, Closing Keynote, Sep. 2024.
+                      </li>
                       <li class="mb-1">
                         <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Container virtualizations for computational science on HPC environments, <I>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) Annual Meeting 2019</I>, Mar. 2019.
                       </li>
